config/tls_origination/envoy_1_8_0.yaml

stats_sinks:
  - name: envoy.statsd
    config:
      address: { socket_address: { address: 0.0.0.0, port_value: 8125 } }
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
             name: local_route
             virtual_hosts:
             - name: backend
               domains:
               - "*"
               routes:
               - match:
                   prefix: /
                 route:
                   cluster: public_backend
                   request_headers_to_add:
                   - header:
                       key: "a"
                       value: "b"
                     append: false
                   - header:
                       key: "c"
                       value: "d"
                     append: false
                   - header:
                       key: "Host"
                       value: "public_backend.com"
                     append: false
          http_filters:
          - name: envoy.router
          use_remote_address: true
          access_log:
            name: "envoy.file_access_log"
            filter:
              not_health_check_filter: {}
            config:
              path: "/var/log/envoy/access.log"
              format: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
clusters:
  - name: goid_backend
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: public_backend.com
        port_value: 443
    tls_context:
      common_tls_context:
        alpn_protocols: [""]
admin:
  access_log_path: "/var/log/envoy/access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 1936
